crates/tui/tests/storybook/snapshots/app_prompt::prompt_working_bar_width_ladder.step-3.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




────── 19.5k (78%) ─

────────────────────
 ○ normal   1:1 100%
