crates/tui/tests/storybook/snapshots/app_prompt::transcript_live_search_preview.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 58 14
  0   0  57 fg=AnsiValue(244) bg=AnsiValue(234) attrs=bold
  0  57   1 bg=AnsiValue(235)
  1  57   1 bg=AnsiValue(235)
  2   0  57 bg=AnsiValue(236)
  2  57   1 bg=AnsiValue(243)
  3   0   1 bg=AnsiValue(236)
  3   1   4 bg=AnsiValue(236) attrs=bold
  3   5  14 fg=AnsiValue(0) bg=AnsiValue(208)
  3  19  25 bg=AnsiValue(236) attrs=bold
  3  44  13 bg=AnsiValue(236)
  3  57   1 bg=AnsiValue(243)
  4   0  57 bg=AnsiValue(236)
  4  57   1 bg=AnsiValue(243)
  5  57   1 bg=AnsiValue(243)
  6   0  57 bg=AnsiValue(236)
  6  57   1 bg=AnsiValue(243)
  7   0   1 bg=AnsiValue(236)
  7   1  15 bg=AnsiValue(236) attrs=bold
  7  16  41 bg=AnsiValue(236)
  7  57   1 bg=AnsiValue(243)
  8   0  57 bg=AnsiValue(236)
  8  57   1 bg=AnsiValue(243)
  9   0   6 fg=AnsiValue(208) attrs=bold
  9   6  19 fg=AnsiValue(244)
  9  25   2 fg=AnsiValue(244) attrs=dim
  9  27  29 fg=AnsiValue(244)
 10   0  58 fg=AnsiValue(237)
 12   0  58 fg=AnsiValue(237)
 13   0  15 bg=AnsiValue(233)
 13  15   1 fg=Black bg=White
 13  16  41 bg=AnsiValue(233)
