crates/tui/tests/storybook/snapshots/app_status::statusline_width_ladder.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 pr… INSERT  normal  42.0 tok/s · permission pending · 2 procs 12:34 56%
