crates/tui/tests/storybook/snapshots/app_status::statusline_width_ladder.step-2.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  tip ctrl+enter / ctrl+q…
────────────────────────────

────────────────────────────
 normal            12:34 56%
